updated the website

--- a/teaching.html
+++ b/teaching.html
@@ -35,23 +35,16 @@ MathJax.Hub.Config({
 </div>
 <h2>Current classes</h2>
 <p></p>
-<h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22815/14002/main" target=&ldquo;blank&rdquo;><b>22815</b> Advanced Programming</a></h3>
-<p>Term: Spring 2022 | Units: 4 | Section: 01 | Students enrolled: 100 | Lectures: Sun, Tue 5:00&ndash;7:00pm | Exam Date/Time: 6/26/22 3:30pm | Prerequisite: Foundations of Computer and Programming<br /></p>
+<h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22811/" target=&ldquo;blank&rdquo;><b>22811</b> Foundations of Computer and Programming</a></h3>
+<p>Term: Fall 2022 | Units: 4 | Section: 01 | Students enrolled: 100 | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 2/14/23 9:00am | Prerequisite: Calculus I<br /></p>
 <table class="imgtable"><tr><td>
-<a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22815/14002/main"><img src="myLife.png" alt="My life" width="250px" /></a>&nbsp;</td>
+<a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22811/"><img src="myLife.png" alt="My life" width="250px" /></a>&nbsp;</td>
 <td align="left"><p>Computational thinking and programming code, data representation and data types, branching and iteration, recursion and bisection, string manipulation, tuples and lists, arrays and dictionaries, variables and immutable data structures, functions and methods, classes and objects, abstraction and interfaces, encapsulation and object-oriented programming, inheritance and polymorphism, overloading and overriding, testing and debugging, exceptions and assertions.</p>
 </td></tr></table>
-<p>This course covers the fundamentals of computer programming with an emphasis on computational thinking, understanding algorithms, and the basic concepts of programming languages to build a solid background as it is the prerequisite for most of the CS curriculum.
+<p>This course covers the fundamentals of computer programming with an emphasis on computational thinking, understanding algorithms, and the basic concepts of programming languages to build a solid background as it is the prerequisite for most of the CS curriculum. This course was formerly taught 2021-22. Some of the material from that class is expanded and used here. 
 </p>
 <h2>Selected past courses</h2>
-<h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22803/14002/main" target=&ldquo;blank&rdquo;><b>22803</b> Optimization in Data Science</a></h3>
-<p>Term: Spring 2022 | Units: 4 | Section: 01 | Students enrolled: 30 | Lectures: Sat, Mon 5:00&ndash;7:00pm | Exam Date/Time: 6/25/22 9:00am | Prerequisite: Some programming experience and familiarity with matrix computations.<br /></p>
-<table class="imgtable"><tr><td>
-<a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22803/14002/main"><img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="250px" /></a>&nbsp;</td>
-<td align="left"><p>Least-squares, constrained and nonlinear least-squares; applications to model fitting, regularization and cross-validation. Convex sets and functions and the corresponding analytical conditions for recognition. The basics of convex analysis and theory of convex programming: Karush-Kuhn-Tucker (KKT) optimality conditions, complementary slackness conditions, duality theory (weak and strong duality theorems), sensitivity analysis, theorems of the alternatives including Farkas&rsquo; lemma. Linear and quadratic programming, semidefinite programming, and geometric programming.</p>
-</td></tr></table>
-<p>This course was formerly known as <a href="./cvx/home.html" target=&ldquo;blank&rdquo;><b>22494</b> Convex Optimization</a>, and was taught 2019-20. Some of the material from that class is expanded and used here. 
-</p>
+<p></p>
 <h3><a href="./game/home.html" target=&ldquo;blank&rdquo;><b>22058</b> Algorithmic Game Theory</a></h3>
 <p>Term: Fall 2021 | Units: 4 | Section: 01 | Students enrolled: 15 | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 1/15/22 3:00pm | Prerequisite: Some optimization experience and familiarity with economics.<br /></p>
 <table class="imgtable"><tr><td>
@@ -85,10 +78,10 @@ MathJax.Hub.Config({
 <p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>. <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> can serve as an auxiliary text. Moreover, we will use the <a href="http://works.bepress.com/scott_hinton/41/" target=&ldquo;blank&rdquo;>constraint-based modeling lectures</a> from a course on metabolic modeling taught by Scott Hinton.
 </p>
 <h3><a href="./cvx/home.html" target=&ldquo;blank&rdquo;><b>22494</b> Convex Optimization</a></h3>
-<p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am at Math 217 | Exam Date/Time: 6/28/20 9:00am | Prerequisite: Linear Algebra I<br /></p>
+<p>Term: Spring 2020 | Units: 3 | Section: 01 | Students enrolled: 50 | Lectures: Sun, Tue 9:00&ndash;10:30am at Math 217 | Exam Date/Time: 6/28/20 9:00am | Prerequisite: Some programming experience and familiarity with matrix computations.<br /></p>
 <table class="imgtable"><tr><td>
-<a href="./cvx/home.html"><img src="./cvx/max_paraboloid.svg" alt="A quadratic function" width="250px" /></a>&nbsp;</td>
-<td align="left"><p>Convex sets, functions, and optimization problems. The basics of convex analysis and theory of convex programming: optimality conditions, duality theory, theorems of alternative, and applications. Least-squares, linear and quadratic programs, semidefinite programming, and geometric programming. Numerical algorithms for smooth and equality constrained problems; interior-point methods for inequality constrained problems. Applications to systems biology, computational geometry, statistics, machine learning, and electrical engineering. </p>
+<a href="./cvx/home.html"><img src="https://dcp.stanford.edu/static/dcp_sandbox/images/convex.svg" alt="A quadratic function" width="250px" /></a>&nbsp;</td>
+<td align="left"><p>Least-squares, constrained and nonlinear least-squares; applications to model fitting, regularization and cross-validation. Convex sets and functions and the corresponding analytical conditions for recognition. The basics of convex analysis and theory of convex programming: Karush-Kuhn-Tucker (KKT) optimality conditions, complementary slackness conditions, duality theory (weak and strong duality theorems), sensitivity analysis, theorems of the alternatives including Farkas&rsquo; lemma. Linear and quadratic programming, semidefinite programming, and geometric programming.</p>
 </td></tr></table>
 <p>The course materials are the same as <a href="https://web.stanford.edu/class/ee364a/">EE364a</a> (Stanford) and <a href="http://www.seas.ucla.edu/~vandenbe/ee236b/ee236b.html">EE236b</a> (UCLA). Specifically, the textbook and lecture slides can be found <a href="http://stanford.edu/~boyd/cvxbook/">here</a>.</p>
 </td>
