updated the website

--- a/people.html
+++ b/people.html
@@ -35,17 +35,21 @@ MathJax.Hub.Config({
 </div>
 <h2>Current graduate students</h2>
 <ul>
+<li><p>Maryam Shabani</p>
+</li>
+<li><p>Pedram Rajaii</p>
+</li>
 <li><p>Farzane Farahani</p>
 </li>
 <li><p>Arya Zadebrahimi</p>
 </li>
 <li><p>Iman Ghadimi</p>
 </li>
-<li><p>Fateme Alimirzaei</p>
-</li>
 </ul>
 <h2>Former graduate students</h2>
 <ul>
+<li><p>Fateme Alimirzaei</p>
+</li>
 <li><p>Ali Fathi</p>
 </li>
 </ul>
