--- a/teaching.html
+++ b/teaching.html
@@ -35,6 +35,14 @@ MathJax.Hub.Config({
 </div>
 <h2>Current classes</h2>
 <p></p>
+<h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22059/" target=&ldquo;blank&rdquo;><b>22059</b> Foundations of Computer and Programming</a></h3>
+<p>Term: Fall 2022 | Units: 3 | Section: 01 | Students enrolled: 40 | Lectures: Sun, Tue 3:00&ndash;4:30pm | Exam Date/Time: 1/12/23 9:00am | Prerequisite: Undergraduate students benefit from Probability I, or equivalent.<br /></p>
+<table class="imgtable"><tr><td>
+<a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22059/"><img src="game.png" alt="Game theory" width="250px" /></a>&nbsp;</td>
+<td align="left"><p>Rigorous introduction to game theory and its applications to economics, political science, computer science, and biology. Topics include normal and extensive forms, dominant strategies, static and dynamic games of complete and incomplete information, repeated games and refinements, elements of evolutionary game theory, solution concepts such as Nash equilibrium, subgame-perfect equilibrium, and Bayesian equilibrium. </p>
+</td></tr></table>
+<p>The class aims to provide a solid basis in game-theoretic tools and concepts. Technical material covering a variety of non-cooperative game theory topics will be presented.
+</p>
 <h3><a href="https://hamband.math.sharif.edu/wiki/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87/%D8%AF%D8%B1%D9%88%D8%B3/22811/" target=&ldquo;blank&rdquo;><b>22811</b> Foundations of Computer and Programming</a></h3>
 <p>Term: Fall 2022 | Units: 4 | Section: 01 | Students enrolled: 100 | Lectures: Sun, Tue 8:00&ndash;10:00am | Exam Date/Time: 2/14/23 9:00am | Prerequisite: Calculus I<br /></p>
 <table class="imgtable"><tr><td>
