updated the website

--- a/cvx/courseinfo.html
+++ b/cvx/courseinfo.html
@@ -26,7 +26,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="contact.html">Contact</a></div>
 <div class="menu-category">Course materials</div>
 <div class="menu-item"><a href="http://stanford.edu/~boyd/cvxbook/">Textbook</a></div>
-<div class="menu-item"><a href="https://vclass.ecourse.sharif.edu/ch/mtefagh">Webinars</a></div>
+<div class="menu-item"><a href="https://vc.sharif.edu/mtefagh">Webinars</a></div>
 <div class="menu-item"><a href="quizzes.html">Quizzes</a></div>
 <div class="menu-item"><a href="http://ocw.sharif.edu/course/id/203/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87-%D8%B9%D9%84%D9%88%D9%85-%D8%B1%DB%8C%D8%A7%D8%B6%DB%8C/%D8%A8%D9%87%DB%8C%D9%86%D9%87-%D8%B3%D8%A7%D8%B2%DB%8C-%D9%85%D8%AD%D8%AF%D8%A8.html">OCW</a></div>
 <div class="menu-category">Assignments</div>
@@ -54,7 +54,7 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h2>Lectures</h2>
-<p>Lectures are Sundays and Tuesdays, 9:00&ndash;10:30 am,  via <a href="https://vclass.ecourse.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vclass.ecourse.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars.<br />
+<p>Lectures are Sundays and Tuesdays, 9:00&ndash;10:30 am,  via <a href="https://vc.sharif.edu/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vc.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars.<br />
 
 Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester, but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars but the recorded videos are available <a href="https://www.aparat.com/playlist/305809" target=&ldquo;blank&rdquo;>here</a>.
 </p>
@@ -65,11 +65,11 @@ Videos of all in-class lectures will be available on <a href="http://ocw.sharif.
 The TAs will offer informal working sessions, that will
 also serve as their office hours, starting the second week of class. Attendance is not required. </p>
 <ul>
-<li><p>Artin Tajdini: Wednesdays, 2:00&ndash;3:00 pm, via <a href="https://vclass.ecourse.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a></p>
+<li><p>Artin Tajdini: Wednesdays, 2:00&ndash;3:00 pm, via <a href="https://vc.sharif.edu/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a></p>
 </li>
-<li><p>Parsa Mashayekhi: Tuesdays, 3:00&ndash;4:00 pm, via <a href="https://vclass.ecourse.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a></p>
+<li><p>Parsa Mashayekhi: Tuesdays, 3:00&ndash;4:00 pm, via <a href="https://vc.sharif.edu/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a></p>
 </li>
-<li><p>Mojtaba Zare: Mondays, 3:00&ndash;4:00 pm, via <a href="https://vclass.ecourse.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a>
+<li><p>Mojtaba Zare: Mondays, 3:00&ndash;4:00 pm, via <a href="https://vc.sharif.edu/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a>
 </p>
 </li>
 </ul>
@@ -143,7 +143,7 @@ applications. Interior-point methods. Applications to signal processing, statist
 </td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-05 20:29:24 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-27 15:53:00 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
