--- a/cvx/readings.html
+++ b/cvx/readings.html
@@ -26,7 +26,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="contact.html">Contact</a></div>
 <div class="menu-category">Course materials</div>
 <div class="menu-item"><a href="http://stanford.edu/~boyd/cvxbook/">Textbook</a></div>
-<div class="menu-item"><a href="https://vclass.ecourse.sharif.edu/ch/mtefagh">Webinars</a></div>
+<div class="menu-item"><a href="https://vc.sharif.edu/mtefagh">Webinars</a></div>
 <div class="menu-item"><a href="quizzes.html">Quizzes</a></div>
 <div class="menu-item"><a href="http://ocw.sharif.edu/course/id/203/%D8%AF%D8%A7%D9%86%D8%B4%DA%A9%D8%AF%D9%87-%D8%B9%D9%84%D9%88%D9%85-%D8%B1%DB%8C%D8%A7%D8%B6%DB%8C/%D8%A8%D9%87%DB%8C%D9%86%D9%87-%D8%B3%D8%A7%D8%B2%DB%8C-%D9%85%D8%AD%D8%AF%D8%A8.html">OCW</a></div>
 <div class="menu-category">Assignments</div>
@@ -100,7 +100,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-05 20:29:26 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-27 15:53:03 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
