updated the website

--- a/cvx/home.html
+++ b/cvx/home.html
@@ -70,7 +70,7 @@ MathJax.Hub.Config({
 </li>
 <li><p>All lectures and office hours during Week 3 are canceled due to the coronavirus outbreak and will be rescheduled for a later date.</p>
 </li>
-<li><p>We will resume our class virtually amid novel coronavirus fears via <a href="https://vclass.ecourse.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. All TA session will be held via <a href="https://vclass.ecourse.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a> too.</p>
+<li><p>We will resume our class virtually amid novel coronavirus fears via <a href="https://vc.sharif.edu/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. All TA session will be held via <a href="https://vc.sharif.edu/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a> too.</p>
 </li>
 <li><p><a href="courseinfo.html" target=&ldquo;blank&rdquo;>Office hours</a> have been updated to reflect new online office hours.</p>
 </li>
@@ -83,7 +83,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-27 15:52:59 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-28 06:52:56 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
