--- a/cvx/courseinfo.html
+++ b/cvx/courseinfo.html
@@ -59,7 +59,7 @@ MathJax.Hub.Config({
 Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester, but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars but the recorded videos are available <a href="https://www.aparat.com/playlist/305809" target=&ldquo;blank&rdquo;>here</a>.
 </p>
 <h2>Office hours</h2>
-<p><b>Mojtaba Tefagh's office hours:</b> Sundays, 10:30&ndash;11:30 am, via <a href="https://vclass.ecourse.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>.<br /><br />
+<p><b>Mojtaba Tefagh's office hours:</b> Sundays, 10:30&ndash;11:30 am, via <a href="https://vc.sharif.edu/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>.<br /><br />
 
 <b>TA office hours:</b>
 The TAs will offer informal working sessions, that will
@@ -143,7 +143,7 @@ applications. Interior-point methods. Applications to signal processing, statist
 </td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-27 15:53:00 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2022-09-28 06:52:56 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
