updated the website

--- a/software.html
+++ b/software.html
@@ -74,7 +74,7 @@ MathJax.Hub.Config({
 <ul>
 <li><p><b>Project name:</b> <tt>sparseQFCA.jl</tt></p>
 </li>
-<li><p><b>Project homepage:</b> <a href="https://juliahub.com/docs/sparseQFCA/kNUWx/0.6.0/" target=&ldquo;blank&rdquo;>https://juliahub.com/docs/sparseQFCA/kNUWx/0.6.0/</a></p>
+<li><p><b>Project homepage:</b> <a href="https://juliahub.com/docs/sparseQFCA/" target=&ldquo;blank&rdquo;>https://juliahub.com/docs/sparseQFCA/</a></p>
 </li>
 <li><p><b>Operating system(s):</b> Platform independent</p>
 </li>
