--- a/game/projects.html
+++ b/game/projects.html
@@ -141,7 +141,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-28 06:52:55 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2023-03-08 10:58:16 GMT Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
