updated the website

--- a/publications.html
+++ b/publications.html
@@ -35,6 +35,10 @@ MathJax.Hub.Config({
 <div class="infoblock">
 <div class="blockcontent">
 <dl>
+<dt><a href="https://dx.doi.org/10.1088/1361-6560/acbefe">Built-in wavelet-induced smoothness to reduce plan complexity in intensity modulated radiation therapy (IMRT)</a></dt>
+<dd><p>
+M. Tefagh and M. Zarepisheh, <i>Physics in Medicine &amp; Biology</i>, 2023.
+</p></dd>
 <dt><a href="papers/ABCD.html">Atomic bonded cross-chain debt</a></dt>
 <dd><p>
 M. Tefagh, F. Bagheri, A. Khajehpour, and M. Abdi, <i>ICBTA</i>, 2020.</p></dd>
