--- a/people.html
+++ b/people.html
@@ -37,20 +37,17 @@ MathJax.Hub.Config({
 <ul>
 <li><p>Maryam Shabani</p>
 </li>
-<li><p>Pedram Rajaii</p>
-</li>
-<li><p>Farzane Farahani</p>
-</li>
-<li><p>Arya Zadebrahimi</p>
-</li>
-<li><p>Iman Ghadimi</p>
+<li><p>Pedram Rajaii
+</p>
 </li>
 </ul>
 <h2>Former graduate students</h2>
 <ul>
-<li><p>Fateme Alimirzaei</p>
+<li><p><a href="https://github.com/iManGHD">Iman Ghadimi</a></p>
 </li>
-<li><p>Ali Fathi</p>
+<li><p><a href="https://github.com/f-almrz76">Fateme Alimirzaei</a></p>
+</li>
+<li><p><a href="https://github.com/Alef125">Ali Fathi</a></p>
 </li>
 </ul>
 </td>
