--- a/publications.html
+++ b/publications.html
@@ -35,10 +35,12 @@ MathJax.Hub.Config({
 <div class="infoblock">
 <div class="blockcontent">
 <dl>
+<dt><a href="papers/Improving_Grading_Fairness_and_Transparency_with_Decentralized_Collaborative_Peer_Assessment.pdf">Improving Grading Fairness and Transparency with Decentralized Collaborative Peer Assessment</a></dt>
+<dd><p>
+S. Alipour, S. Elahimanesh, S. Jahanzad, P. Morassafar, Seyed P. Neshaei, and M. Tefagh, <i>CSCW</i>, 2024.</p></dd>
 <dt><a href="https://dx.doi.org/10.1088/1361-6560/acbefe">Built-in wavelet-induced smoothness to reduce plan complexity in intensity modulated radiation therapy (IMRT)</a></dt>
 <dd><p>
-M. Tefagh and M. Zarepisheh, <i>Physics in Medicine &amp; Biology</i>, 2023.
-</p></dd>
+M. Tefagh and M. Zarepisheh, <i>Physics in Medicine &amp; Biology</i>, 2023.</p></dd>
 <dt><a href="papers/ABCD.html">Atomic bonded cross-chain debt</a></dt>
 <dd><p>
 M. Tefagh, F. Bagheri, A. Khajehpour, and M. Abdi, <i>ICBTA</i>, 2020.</p></dd>
