--- a/cvx/quizzes.html
+++ b/cvx/quizzes.html
@@ -81,7 +81,7 @@ from the textbook. Most of them can be done without paper and pencil, but a few 
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-05 13:07:26 GMT Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-06-24 12:25:05 GMT Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
