--- a/people.html
+++ b/people.html
@@ -35,14 +35,13 @@ MathJax.Hub.Config({
 </div>
 <h2>Current graduate students</h2>
 <ul>
-<li><p>Maryam Shabani</p>
-</li>
-<li><p>Pedram Rajaii
-</p>
+<li><p>Soraya Mirzaei</p>
 </li>
 </ul>
 <h2>Former graduate students</h2>
 <ul>
+<li><p><a href="https://github.com/mrymshbn" target=&ldquo;blank&rdquo;>Maryam Shabani</a></p>
+</li>
 <li><p><a href="https://github.com/iManGHD">Iman Ghadimi</a></p>
 </li>
 <li><p><a href="https://github.com/f-almrz76">Fateme Alimirzaei</a></p>
