--- a/publications.html
+++ b/publications.html
@@ -35,10 +35,13 @@ MathJax.Hub.Config({
 <div class="infoblock">
 <div class="blockcontent">
 <dl>
-<dt><a href="papers/Improving_Grading_Fairness_and_Transparency_with_Decentralized_Collaborative_Peer_Assessment.pdf">Improving Grading Fairness and Transparency with Decentralized Collaborative Peer Assessment</a></dt>
+<dt><a href="https://doi.org/10.1371/journal.pcbi.1012233">GEM-based computational modeling for exploring metabolic interactions in a microbial community</a></dt>
 <dd><p>
-S. Alipour, S. Elahimanesh, S. Jahanzad, P. Morassafar, S.P. Neshaei, and M. Tefagh, <i>CSCW</i>, 2024.</p></dd>
-<dt><a href="https://dx.doi.org/10.1088/1361-6560/acbefe">Built-in wavelet-induced smoothness to reduce plan complexity in intensity modulated radiation therapy (IMRT)</a></dt>
+S. Mirzaei and M. Tefagh, <i>PLOS Computational Biology</i>, 2024.</p></dd>
+<dt><a href="https://doi.org/10.1145/3637350" target=&ldquo;blank&rdquo;>Improving Grading Fairness and Transparency with Decentralized Collaborative Peer Assessment</a></dt>
+<dd><p>
+S. Alipour, S. Elahimanesh, S. Jahanzad, I. Mohammadi, P. Morassafar, S.P. Neshaei, and M. Tefagh, <i>CSCW1</i>, 2024.</p></dd>
+<dt><a href="https://doi.org/10.1088/1361-6560/acbefe">Built-in wavelet-induced smoothness to reduce plan complexity in intensity modulated radiation therapy (IMRT)</a></dt>
 <dd><p>
 M. Tefagh and M. Zarepisheh, <i>Physics in Medicine &amp; Biology</i>, 2023.</p></dd>
 <dt><a href="papers/ABCD.html">Atomic bonded cross-chain debt</a></dt>
