--- a/cvx/homework.html
+++ b/cvx/homework.html
@@ -135,7 +135,7 @@ The second project involves writing a short report (1-2 pages) of a paper you re
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-05 13:07:27 GMT Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-06-24 12:25:05 GMT Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
