--- a/game/home.html
+++ b/game/home.html
@@ -103,7 +103,7 @@ Many advanced topics and cutting-edge issues in the field are discussed, which r
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-01-05 13:07:21 GMT Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2024-06-24 12:25:04 GMT Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
