--- a/publications.html
+++ b/publications.html
@@ -35,6 +35,9 @@ MathJax.Hub.Config({
 <div class="infoblock">
 <div class="blockcontent">
 <dl>
+<dt><a href="https://doi.org/10.1093/bioinformatics/btaf328">Reducing redundancy and enhancing accuracy through a phylogenetically-informed microbial community metabolic modeling approach</a></dt>
+<dd><p>
+S. Mofidifar and M. Tefagh, <i>Bioinformatics</i>, 2025.</p></dd>
 <dt><a href="https://doi.org/10.1371/journal.pcbi.1012233">GEM-based computational modeling for exploring metabolic interactions in a microbial community</a></dt>
 <dd><p>
 S. Mirzaei and M. Tefagh, <i>PLOS Computational Biology</i>, 2024.</p></dd>
